# project_structure

./: .gitignore  Dockerfile  README.md  config  config.py  main.py  pre-commit-config.yaml  pyproject.toml
.github/workflows/: check.yml
sample_project/: main.py
sample_project/data/: 2024-12-01.txt  2024-12-02.txt  2024-12-03.txt
sample_project/infrastructure/: di.py
sample_project/services/: statistic.py
src/app/: log_analyzer.py  module.py
tests/: conftest.py  test_statistic.py
