[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = "Структура проекта"
authors = ["Сорокин Андрей Андреевич"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"
ruff = "^0.8.1"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 79
exclude = ["migrations", "tests"]
fix = true

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
