[tool.poetry]
name = "log-analyser"
version = "0.1.0"
description = "parser nginx logs"
authors = ["Andrey Sorokin"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.ruff]
select = ["E", "W", "F"]
ignore = ["E501"]
line-length = 88
include = ["*.py"]
exclude = ["tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = "tests"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
